[package]
name = "human-escrow"
version = "0.1.0"
edition = "2021"
description = "human pitches contracts"
license-file = "../LICENSE"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
human-common = { path = "../common", version = "0.1.0" }
solana-program = "1.9.6"
borsh = "0.9.1"
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0.30"

[dev-dependencies]
solana-program-test = "1.9.6"
solana-sdk = "1.9.6"
rand = "0.8"

[lib]
crate-type = ["cdylib", "lib"]