[package]
name = "human-fanout"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license-file = "../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]
name = "fanout"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.27.0", features = ["init-if-needed"]}
anchor-spl = "0.27.0"
spl-token = "3.5.0"
spl-math = {version = "0.1", features = ["no-entrypoint"]}

[dev-dependencies]
proptest = "1.0.0"